flux/apps/hoyeslab/media/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: jellyfin.hoyes.dev
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: jellyfin
                port:
                  name: http
  tls:
    - hosts:
        - jellyfin.hoyes.dev
      secretName: hoyes-dev-tls
